Cycles renders only two frames of animation #89040

Closed
opened 2021-06-10 23:09:59 +02:00 by Nikita · 10 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.59

Blender Version
Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: 84da05a8b8
Worked:

Short description of error
Cycles render only two frames of animation when all of these functions are enabled: Time remapping (with ratio more than 1), Motion Blur and Persistent Data.

Exact steps for others to reproduce the error
To recreate this problem you need to create animation, set time remapping with ratio more than 1 (for example 60/24), enable Motion blur and enable Persistent data, as you can see in attached file.
untitled.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.59 **Blender Version** Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: `84da05a8b8` Worked: **Short description of error** Cycles render only two frames of animation when all of these functions are enabled: Time remapping (with ratio more than 1), Motion Blur and Persistent Data. **Exact steps for others to reproduce the error** To recreate this problem you need to create animation, set time remapping with ratio more than 1 (for example 60/24), enable Motion blur and enable Persistent data, as you can see in attached file. [untitled.blend](https://archive.blender.org/developer/F10166288/untitled.blend)
Author

Added subscriber: @Kozn

Added subscriber: @Kozn

Added subscriber: @Zandman

Added subscriber: @Zandman

Confirmed with attached Blend file on macOS Big Sur on MacBook M1. When I manually created a new animation based on the instructions the rendering stopped at frame 5. So the position where rendering stops seems to vary.

Maybe related to #89053, as that issue also claims to be Motion Blur + Persistent Data related.

Confirmed with attached Blend file on macOS Big Sur on MacBook M1. When I manually created a new animation based on the instructions the rendering stopped at frame 5. So the position where rendering stops seems to vary. Maybe related to #89053, as that issue also claims to be Motion Blur + Persistent Data related.
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this issue with Blender 2.93 release and Blender 3.0 on Linux (see information below).

I decided to bisect the issue and to see if any more information could be found out. The "culprit" commit is the introduction of Persistent Data. 50782df425

I also ran Blender with the commend --debug-all and I couldn't find anything useful from it.

System Information
Operating system: Linux-5.10.0-7-amd64-x86_64-with-glibc2.31 64 Bits

Blender Version: 3.0.0 Alpha, branch: master, commit date: 2021-06-11 21:39, hash: d75e45d10c

I can confirm this issue with Blender 2.93 release and Blender 3.0 on Linux (see information below). I decided to bisect the issue and to see if any more information could be found out. The "culprit" commit is the introduction of `Persistent Data`. 50782df425 I also ran Blender with the commend `--debug-all` and I couldn't find anything useful from it. **System Information** Operating system: Linux-5.10.0-7-amd64-x86_64-with-glibc2.31 64 Bits **Blender Version:** 3.0.0 Alpha, branch: master, commit date: 2021-06-11 21:39, hash: `d75e45d10c`

There seems to have been some prior problems with Motion Blur and Persistent Data: #87283, though that is marked as being fixed.

There seems to have been some prior problems with Motion Blur and Persistent Data: #87283, though that is marked as being fixed.
Member

This issue is different as it's the time remapping along with motion blur and persistent data that is causing the issue from the looks of it.

This issue is different as it's the time remapping along with motion blur and persistent data that is causing the issue from the looks of it.

This issue was referenced by a072e87e04

This issue was referenced by a072e87e04ee583f899db4bd174e1804c97b3c9d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-07-12 17:43:12 +02:00
Sign in to join this conversation.
5 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#89040
No description provided.